--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_ROUNDS_PER_RECORD=30
 VITE_DATA_URL=https://raw.githubusercontent.com/ernestchu/revp-user-study-data/main
-VITE_GOOGLE_FORM=https://docs.google.com/forms/u/0/d/e/1FAIpQLSfwPXdybbJj_MHt1eorJacQDBxdS-fPxeReGGtkF6Au4TOiDg/formResponse
+VITE_GOOGLE_FORM_URL=https://docs.google.com/forms/u/0/d/e/1FAIpQLSfwPXdybbJj_MHt1eorJacQDBxdS-fPxeReGGtkF6Au4TOiDg/formResponse
+VITE_GOOGLE_FORM_ENTRIES=["entry.1874024667","entry.1458340284","entry.659270452","entry.1141938070","entry.1106303262","entry.97356366","entry.1658723679"]
